# Projecte

./: Makefile  README.md  udp_server.py
components/swc_button/: CMakeLists.txt  swc_button.c
components/swc_button/include/: swc_button.h
components/swc_fsm/: CMakeLists.txt  fsm.c
components/swc_fsm/include/: fsm_types.h
components/swc_i2s/: CMakeLists.txt  swc_i2s.c
components/swc_i2s/include/: swc_i2s.h
components/swc_uart/: CMakeLists.txt  swc_uart.c
components/swc_uart/include/: swc_uart.h
components/swc_udp/: CMakeLists.txt  swc_udp.c
components/swc_udp/include/: swc_udp.h
components/swc_wifi/: CMakeLists.txt  station_ap.c
components/swc_wifi/include/: station_ap.h
main/: CMakeLists.txt  main.c
